tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__prompt_edit_thread_history_line.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: combined
---
• A new conversation continues from this point
