tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__rate_limit_reset_available_hint.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: rendered
---
• 2 usage limit resets available. Run /usage to use one.
