tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__rate_limit_reset_hint_waits_for_active_output.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "lines_to_single_string(&chat.active_cell_transcript_lines(80).expect(\"active output with reset hint\"),)"
---
active tool

• 2 usage limit resets available. Run /usage to use one.
