tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__safety_buffering_retry_prompt.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: popup
---
  An extra safety pass is running on this turn.
  Retry on a faster model for a quicker answer, at lower capability.

› 1. Retry with a faster model
  2. Dismiss and keep waiting
  3. Learn more

  Still waiting. This closes when the response lands.
