tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__safety_buffering_side_conversation_without_retry.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: popup
---
  An extra safety pass is running on this turn.

› 1. Dismiss and keep waiting
  2. Learn more

  Still waiting. This closes when the response lands.
